tests/negative/parser/dyn_non_ident.orng
// dyn_non_ident.orng:6:18: error: expected `identifier`, got `{`
//     let x: &dyn {Int}
//                 ^
// 
fn main() -> Int { 
    let x: &dyn {Int}
}
